<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">


    <LinearLayout
        style="@style/background_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- بطاقة الطالب -->
        <androidx.cardview.widget.CardView
            android:id="@+id/student_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/white"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- صورة واسم -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circle_background"
                        android:contentDescription="@string/student_avatar"
                        android:padding="8dp"
                        android:src="@drawable/ic_student" />

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/full_name"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- خط فاصل -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="#B0BEC5" />

                <!-- معلومات الطالب -->
                <include
                    android:id="@+id/rowBirthYear"
                    layout="@layout/item_row_info"
                    android:tag="@string/year_of_birth" />

                <include
                    android:id="@+id/rowPhone"
                    layout="@layout/item_row_info"
                    android:tag="@string/phone_number" />

                <include
                    android:id="@+id/rowPaymentDate"
                    layout="@layout/item_row_info"
                    android:tag="@string/payment_date" />

                <include
                    android:id="@+id/rowPaidCash"
                    layout="@layout/item_row_info"
                    android:tag="@string/paid_cash_label"
                    android:tooltipText="@string/payment_summary_cash"
                    tools:ignore="UnusedAttribute" />

                <include
                    android:id="@+id/rowPaidBank"
                    layout="@layout/item_row_info"
                    android:tag="@string/paid_bank_label"
                    android:tooltipText="@string/payment_summary_bank"
                    tools:ignore="UnusedAttribute" />

                <include
                    android:id="@+id/rowPaid"
                    layout="@layout/item_row_info"
                    android:tag="@string/paid_total"
                    android:tooltipText="@string/payment_summary_total"
                    tools:ignore="UnusedAttribute" />

                <include
                    android:id="@+id/rowTotalAmount"
                    layout="@layout/item_row_info"
                    android:tag="@string/total_amount_label" />

                <include
                    android:id="@+id/rowRemaining"
                    layout="@layout/item_row_info"
                    android:tag="@string/remaining_total"
                    android:tooltipText="@string/payment_summary_remaining"
                    tools:ignore="UnusedAttribute" />

                <include
                    android:id="@+id/rowPaymentMethod"
                    layout="@layout/item_row_info"
                    android:tag="@string/payment_method" />

                <include
                    android:id="@+id/rowAdded"
                    layout="@layout/item_row_info"
                    android:tag="@string/added" />

                <include
                    android:id="@+id/rowLastModified"
                    layout="@layout/item_row_info"
                    android:tag="@string/last_modified" />

                <TextView
                    android:id="@+id/tvNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:lineSpacingExtra="4dp"
                    android:textColor="#FF9800"
                    android:textSize="@dimen/_11ssp" />


                <TextView
                    style="@style/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/pyment_months"
                    android:textSize="@dimen/_11ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPayment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/payment_summary_layout"
                    tools:listitem="@layout/item_payment" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- قائمة الدفعات -->

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddPayment"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>