<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:background="@drawable/bg_tooltip"
    android:elevation="8dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/payment_summary_explained_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/payment_summary_popup_title2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/payment_summary_cash"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/tvBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/payment_summary_bank"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/payment_summary_total"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_summary_remaining"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>
