<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="3dp">

        <LinearLayout
            style="@style/background_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/please_enter_the_email_and_password_you_registered_with"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck,VisualLintWearMargin" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                tools:ignore="VisualLintBounds,VisualLintWearMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_dialog"
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#546E7A"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintWearMargin,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                app:passwordToggleEnabled="true"
                tools:ignore="VisualLintBounds,VisualLintWearMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_dialog"
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="VisualLintWearMargin,TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="?attr/colorPrimary"
                app:cornerRadius="12dp"
                app:iconGravity="textStart"
                app:iconTint="@android:color/white"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel_dialog"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:icon="@drawable/ic_password"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#1976D2"
                app:iconGravity="textStart"
                tools:ignore="PrivateResource,VisualLintButtonSize" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>